minor text change

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
         <h5>ID Number: <span class="id-no">XXXX-4118</span></h5>
       </div>
       <div class="dose-details">
-        <p>Appointment Not Schedule</p>
+        <p>Appointment Not Scheduled</p>
         <a routerLink="/schedule" class="btn btn-success">Schedule</a>
       </div>
     </div>
@@ -25,12 +25,6 @@
           >One registration per person is sufficient. Please do not register
           with multiple mobile numbers or different Photo ID Proofs for same
           individual.</span
-        >
-        <span class="notecontent"
-          >Scheduling of Second dose should be done from the same account (same
-          mobile number) from which the first dose has been taken, for
-          generation of final certificate. Separate registration for second dose
-          is not necessary.</span
         >
         <span class="notecontent"
           >Please carry the registered mobile phone and the requisite documents,
@@ -58,23 +52,20 @@
         >
       </p>
 
-      <ol type="i">
+      <ol class="notecontent" type="1">
         <li>The vaccine type.</li>
         <li>The age group (18-44/45+ etc.).</li>
-        <li>The number of slots available for dose 1 and dose 2.</li>
         <li>
           Whether the service is Free or Paid (Vaccination is free of cost at
           all the Government Vaccination Centers).
         </li>
-        <li>Per dose price charged by a private hospital.</li>
+        <li>Prices will be charged by a private hospital.</li>
       </ol>
 
       <p>
         <span class="notecontent"
-          >If you are seeking 1st dose vaccination, the system will show you
-          only the available slots for dose 1. Similarly, if you are due for 2nd
-          dose, the system will show you the available slots for dose 2 after
-          the minimum period from the date of 1st dose vaccination has elapsed.
+          >If you are seeking vaccination, the system will show you
+          only the available slots.
         </span>
         <span class="notecontent"
           >Once a session has been published by the DIO/ private hospital, the
@@ -82,7 +73,7 @@
           rescheduled. In case you have booked an appointment in any such
           vaccination session that is rescheduled for any reason, your
           appointment will also be automatically rescheduled accordingly. You
-          will receive a confirmation SMS in this regard. On such rescheduling,
+          will receive a confirmation E-Mail in this regard. On such rescheduling,
           you would still have the option of cancelling or further rescheduling
           such appointment.
         </span>
@@ -90,11 +81,3 @@
     </div>
   </div>
 </div>
-<!-- {{ first_name }}
-      {{ last_name }}
-      REF ID : {{ refid }} Secret Code : {{ secret_id }}
-      {{ birth_year }}
-      {{ photoid }}
-      {{ id_no }} -->
-
-<!-- <button class="schedule_button">Schedule</button> -->
