--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
 </div>
 
 <footer class="footer">
-  <p>Copyright © 2021 COVID. All Rights Reserved</p>
+  <p>Copyright © 2021 Cov-Aid. All Rights Reserved</p>
   <div>
     <span>Privacy Policy</span>
     <span>Terms of Service</span>
