--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -9,8 +9,8 @@
   </div>
   <p>
     The slots availability data displayed in the pincode or district search is
-    provided by the state govt and private hospitals. Cowin does not create this
-    data, the data accuracy, or guarantee that it is the most recent data
+    provided by the state govt and private hospitals. Cov-Aid does not create
+    this data, the data accuracy, or guarantee that it is the most recent data
     available from the data provider.
   </p>
   <div class="search-center-btns">
