--- a/src/app/search-content/search-content.component.html
+++ b/src/app/search-content/search-content.component.html
@@ -11,8 +11,7 @@
   <p class="search-p">
     <b>NOTE :</b> The slots availability data displayed in the pincode or
     district search is provided by the state govt and private hospitals. The
-    total availability slots includes Dose-1 and Dose-2 slots. While we have
-    real-time data, slot availability on CoWin changes rapidly.
-    <b>D1: Dose 1, D2: Dose 2</b>
+    total availability slots includes Single-Dose slots. While we have real-time
+    data, slot availability on Cov-Aid changes rapidly.
   </p>
 </div>
