--- a/src/app/search-content/search-content.component.html
+++ b/src/app/search-content/search-content.component.html
@@ -15,3 +15,30 @@
     data, slot availability on Cov-Aid changes rapidly.
   </p>
 </div>
+<div class="slot-main">
+  <h3>
+    Slot Search Results <span class="centers-f">(3 Center(s) Found)</span>
+  </h3>
+  <div class="vaccinations">
+    <h6>Showing results for: Vaccination</h6>
+    <div class="result">
+      <p>filter Results By</p>
+    </div>
+    <div class="1st-b">
+      <h4>2 SABOLSINGHAPUR PHC SABOLSINGHAPUR, Hoogly, West Bengal, 712417</h4>
+    </div>
+    <div class="1st-b">
+      <h4>
+        NABAGRAM GOLOKMUNSHI <span class="paid"> PAID</span> Hospital Road
+        Konnagar Nabagram, Hoogly, West Bengal, 712234 COVISHIELD: ₹780
+      </h4>
+    </div>
+    <div class="1st-b">
+      <h4>
+        SURAKSHA DIAGNOSTIC PVT LTD. <span class="paid"> PAID </span>
+        2 G. T. Road Serampore Hooghly, Hoogly, West Bengal, 712202 COVISHIELD:
+        ₹780
+      </h4>
+    </div>
+  </div>
+</div>
