--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -8,9 +8,10 @@
         for vaccination.
       </p>
       <input type="text" name="field1" placeholder="Your Name *" />
-      <label for="job">Date-Of-Birth:</label>
+      <input type="text" name="field1" placeholder="E-Mail id *" />
+      <label for="job">Date Of Birth</label>
       <input type="date" name="field3" placeholder="Year of birth *" />
-      <label for="job">Photo ID Proof:</label>
+      <label for="job"></label>
       <select id="job" name="field4">
         <optgroup label="Photo ID Proof">
           <option>Select type of Id</option>
