--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="id-details mt-2">
         <h5>Year of Birth: <span class="year">1998</span></h5>
-        <h5>Photo ID: <span class="photo-id"> Aadhaar Card</span></h5>
+        <h5>Photo ID: <span class="photo-id">Aadhaar Card</span></h5>
         <h5>ID Number: <span class="id-no">XXXX-4118</span></h5>
       </div>
       <div class="dose-details">
@@ -22,7 +22,7 @@
       <h5>Note</h5>
       <p>
         <span class="notecontent"
-          >One registration per person is sufficient. Please do not register
+          >One registration per person is sufficient. Please do not registers
           with multiple mobile numbers or different Photo ID Proofs for same
           individual.</span
         >
@@ -64,8 +64,8 @@
 
       <p>
         <span class="notecontent"
-          >If you are seeking vaccination, the system will show you
-          only the available slots.
+          >If you are seeking vaccination, the system will show you only the
+          available slots.
         </span>
         <span class="notecontent"
           >Once a session has been published by the DIO/ private hospital, the
@@ -73,9 +73,9 @@
           rescheduled. In case you have booked an appointment in any such
           vaccination session that is rescheduled for any reason, your
           appointment will also be automatically rescheduled accordingly. You
-          will receive a confirmation E-Mail in this regard. On such rescheduling,
-          you would still have the option of cancelling or further rescheduling
-          such appointment.
+          will receive a confirmation E-Mail in this regard. On such
+          rescheduling, you would still have the option of cancelling or further
+          rescheduling such appointment.
         </span>
       </p>
     </div>
