--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,6 +8,6 @@
     <h2>Register or SignIn for Vaccination</h2>
     <p>An OTP will be sent to your Email Id for verification</p>
     <input type="text" placeholder="Enter your Email ID" />
-    <button class="btn btn-otp">Get OTP</button>
+    <button routerLink="/dashboard" class="btn btn-otp">Get OTP</button>
   </div>
 </div>
