Book Slots done

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,6 +3,7 @@
     <h4>Account Details</h4>
     <h4>Registered E-mail ID : <span class="email"> xxxxxx@gxx.com </span></h4>
     <div class="account-details">
+      <div class="vaccine-status">Not Vaccinated</div>
       <div class="name-details">
         <h4 class="my-0">Sayanti Seal</h4>
         <p class="my-0">REF ID : 39126675206610</p>
