--- a/src/app/search-content/search-content.component.html
+++ b/src/app/search-content/search-content.component.html
@@ -14,31 +14,65 @@
     total availability slots includes Single-Dose slots. While we have real-time
     data, slot availability on Cov-Aid changes rapidly.
   </p>
-</div>
-<div class="slot-main">
-  <h3>
-    Slot Search Results <span class="centers-f">(3 Center(s) Found)</span>
-  </h3>
-  <div class="vaccinations">
-    <h6>Showing results for: Vaccination</h6>
-    <div class="result">
-      <p>filter Results By</p>
-    </div>
-    <div class="1st-b">
-      <h4>2 SABOLSINGHAPUR PHC SABOLSINGHAPUR, Hoogly, West Bengal, 712417</h4>
-    </div>
-    <div class="1st-b">
-      <h4>
-        NABAGRAM GOLOKMUNSHI <span class="paid"> PAID</span> Hospital Road
-        Konnagar Nabagram, Hoogly, West Bengal, 712234 COVISHIELD: ₹780
-      </h4>
-    </div>
-    <div class="1st-b">
-      <h4>
-        SURAKSHA DIAGNOSTIC PVT LTD. <span class="paid"> PAID </span>
-        2 G. T. Road Serampore Hooghly, Hoogly, West Bengal, 712202 COVISHIELD:
-        ₹780
-      </h4>
+  <div class="slot-main">
+    <h5>
+      Slot Search Results <span class="centers-f">[3 Center(s) Found]</span>
+    </h5>
+    <div class="vaccinations">
+      <h6>Showing results for: Vaccination</h6>
+      <div class="row mt-4">
+        <div class="col-4">
+          <h5 class="text-center">Places</h5>
+        </div>
+        <div class="col-8">
+          <h5 class="text-center">Available Dates</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <p>
+            2 SABOLSINGHAPUR PHC SABOLSINGHAPUR, Hoogly, West Bengal, 712417
+          </p>
+        </div>
+        <div class="col-8">
+          <div class="d-flex justify-content-around mt-3">
+            <p class="avail">10/06/2021</p>
+            <p class="avail">20/06/2021</p>
+            <p class="avail">30/06/2021</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <p>
+            NABAGRAM GOLOKMUNSHI <span class="paid"> PAID</span> Hospital Road
+            Konnagar Nabagram, Hoogly, West Bengal, 712234 COVISHIELD: ₹780
+          </p>
+        </div>
+        <div class="col-8">
+          <div class="d-flex justify-content-around mt-3">
+            <p class="avail">10/06/2021</p>
+            <p class="n-avail">20/06/2021</p>
+            <p class="avail">30/06/2021</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <p>
+            SURAKSHA DIAGNOSTIC PVT LTD. <span class="paid"> PAID </span>
+            2 G. T. Road Serampore Hooghly, Hoogly, West Bengal, 712202
+            COVISHIELD: ₹780
+          </p>
+        </div>
+        <div class="col-8">
+          <div class="d-flex justify-content-around mt-3">
+            <p class="avail">10/06/2021</p>
+            <p class="avail">20/06/2021</p>
+            <p class="n-avail">30/06/2021</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
