--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -12,11 +12,21 @@
   text-decoration-color: #012060;
 }
 .account-details {
-  padding: 20px 25px;
+  position: relative;
+  padding: 30px 25px 20px;
   border: 1px solid rgb(184, 185, 184);
-  margin: 30px 0;
+  margin: 35px 0 30px;
   border-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+}
+
+.vaccine-status {
+  position: absolute;
+  top: -18px;
+  background-color: #18b5ba;
+  padding: 6px 20px 4px;
+  color: #fff;
+  border-radius: 30px;
 }
 
 .name-details {
@@ -35,6 +45,13 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.dose-details {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
 .dose-details .btn-success {
   background-color: #18b5ba;
   border-color: #18b5ba;
@@ -52,7 +69,7 @@
   border-bottom-right-radius: 10px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 .class .notecontent {
   text-align: left;
