--- a/src/app/search-d/search-d.component.html
+++ b/src/app/search-d/search-d.component.html
@@ -36,8 +36,9 @@
       </select>
       <i class="fas fa-sort-down"></i>
     </div>
-    <button class="btn" (click)="searchBtnClick()">Search</button>
+    <div class="search">
+      <button class="btn" (click)="searchBtnClick()">Search</button>
+    </div>
   </div>
   <search-content [sContentData]="searchContent"></search-content>
 </div>
-
