--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
       <p>Winning Over Covid - 19</p>
     </div>
     <div>
-      <a routerLink="/login" class="btn btn-success">Login</a>
+      <a routerLink="/login" class="btn btn-success">login</a>
       <a routerLink="/register" class="btn btn-success">Register</a>
     </div>
   </div>
