--- a/src/app/search-content/search-content.component.html
+++ b/src/app/search-content/search-content.component.html
@@ -36,9 +36,9 @@
         </div>
         <div class="col-8">
           <div class="d-flex justify-content-around mt-3">
-            <p class="avail">10/06/2021</p>
-            <p class="avail">20/06/2021</p>
-            <p class="avail">30/06/2021</p>
+            <p class="avail" (click)="slotBook()">10/06/2021</p>
+            <p class="avail" (click)="slotBook()">20/06/2021</p>
+            <p class="avail" (click)="slotBook()">30/06/2021</p>
           </div>
         </div>
       </div>
@@ -51,9 +51,9 @@
         </div>
         <div class="col-8">
           <div class="d-flex justify-content-around mt-3">
-            <p class="avail">10/06/2021</p>
+            <p class="avail" (click)="slotBook()">10/06/2021</p>
             <p class="n-avail">20/06/2021</p>
-            <p class="avail">30/06/2021</p>
+            <p class="avail" (click)="slotBook()">30/06/2021</p>
           </div>
         </div>
       </div>
@@ -67,8 +67,8 @@
         </div>
         <div class="col-8">
           <div class="d-flex justify-content-around mt-3">
-            <p class="avail">10/06/2021</p>
-            <p class="avail">20/06/2021</p>
+            <p class="avail" (click)="slotBook()">10/06/2021</p>
+            <p class="avail" (click)="slotBook()">20/06/2021</p>
             <p class="n-avail">30/06/2021</p>
           </div>
         </div>
