--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,25 @@
       <p>Winning Over Covid - 19</p>
     </div>
     <div>
-      <a routerLink="/login" class="btn btn-success">Login</a>
-      <a routerLink="/register" class="btn btn-success">Register</a>
+      <a
+        *ngIf="!loginFlag"
+        routerLink="/login"
+        class="btn btn-success"
+        (click)="loginFunc()"
+      >
+        Login
+      </a>
+      <a
+        *ngIf="loginFlag"
+        routerLink="/home"
+        class="btn btn-success"
+        (click)="loginFunc()"
+      >
+        Logout
+      </a>
+      <a *ngIf="!loginFlag" routerLink="/register" class="btn btn-success">
+        Register
+      </a>
     </div>
   </div>
 </nav>
