--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
         *ngIf="loginFlag"
         routerLink="/home"
         class="btn btn-success"
-        (click)="loginFunc()"
+        (click)="logoutFunc()"
       >
         Logout
       </a>
